--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,48 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
-  height:100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.btn-style {
+  width: 200px;
+  padding: 20px;
+  font-size: 1.3rem;
+  background-color: #fff;
+  border-top: 3px solid #05386b;
+  border-right: 10px solid #05386b;
+  border-bottom: 10px solid #05386b;
+  border-radius: 20px;
+  color: #1b1b1b;
+  transition: .1s;
+  cursor: pointer;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 0 10px 0 10px;
+}
+
+.btn-style Link {
+  text-decoration: none;
+}
+
+.btn-style:hover {
+  border-right: 3px solid #05386b;
+  border-bottom: 3px solid #053863
+}
+
+@media screen and (max-width: 768px) {
+
+  .btn-style {
+    font-size: 1rem;
+    width: 150px;
+    padding: 10px;
+  }
+
 }
